# semcp

./: Cargo.toml  LICENSE  Makefile  README.md  justfile  policy.rego  release-plz.toml  snpx.yaml
.github/workflows/: ci.yml  release.yml
.makes/: init.mk
common/: CHANGELOG.md  Cargo.toml
common/src/: lib.rs
common/testdata/: policy.yaml
samples/filesystem/: policy.yaml
samples/git/: policy.yaml
samples/github/: policy.yaml
snpx/: CHANGELOG.md  Cargo.toml  README.md
snpx/src/: main.rs
src/: lib.rs  main.rs  opa.rs  policy.rs
suvx/: CHANGELOG.md  Cargo.toml  README.md
suvx/src/: main.rs
testdata/: policy.yaml
