[package]
name = "snpx"
version = "0.1.0"
edition = "2021"
description = "Run npx commands in containerized environments for Model Context Protocol (MCP)"
authors = ["snpx contributors"]
license = "MIT"

[[bin]]
name = "snpx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
which = "5.0" 