[package]
name = "snpx"
version = "0.1.0"
edition = "2021"
description = "Run npx commands in containerized environments for Model Context Protocol (MCP)"
authors = ["snpx contributors"]
license = "MIT"

[[bin]]
name = "snpx"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"  # For parsing YAML policies
anyhow = "1.0"
which = "5.0"
reqwest = { version = "0.11", features = ["json"], optional = true }  # For OPA HTTP API
tempfile = "3.2"  # For tests

[features]
default = []
opa = ["reqwest"]  # OPA integration feature flag 