[workspace]
members = ["snpx", "suvx", "common"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
which = "5.0"
policy-mcp = { git = "https://github.com/semcp/policy-mcp", branch = "main" } 
