[package]
name = "semcp-common"
version = "0.1.0"
edition = "2021"
description = "Common code for containerized package managers"
authors = ["snpx contributors"]
license = "MIT"

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
which = { workspace = true }
policy-mcp = { workspace = true } 
